<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_factory</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="josephlearndev@gmail.com">joe</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>libharu</depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
